# libskypekit

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_examples.sh  index.html  install.sh  params.json
examples/: CMakeLists.txt  ping_pong.c
include/: skypekit.h  skypekit_internal.h
src/: SkypekitAccount.cpp  SkypekitConversation.cpp  SkypekitQueue.cpp  SkypekitSkype.cpp  api.cpp
